--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>PostApp4</title>
+    <title>PostApp3</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    <%= javascript_importmap_tags %>
+    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'application', 'data-turbolinks-track': 'reload' %>
+
   </head>
 
   <body>
+   <header>Ruby on Rails スケジュール管理アプリ</header>
+    <div>
     <%= yield %>
+    </div>
   </body>
 </html>
