Rails課題1再提出(2回目)

--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -49,6 +49,6 @@
 <% end %>
 
 <div class = footer>
-  本日の日付：<%= Date.today.strftime("%Y年%m月%d日") %>
+  本日の日付：<%= Date.today.strftime('%Y/%m/%d') %>
 </div>
 
